--- a/poke-scrap.ipynb
+++ b/poke-scrap.ipynb
@@ -5975,7 +5975,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabla = sopa.find_all('tabl', {'class':'roundy'})"
+    "'td', class_='roundy', colspan='2', style='background:#82C274;'\n",
+    "'table', {'class':'roundy'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td class=\"roundy\" colspan=\"2\" style=\"background:#82C274;\"><b><a href=\"/wiki/Ability\" title=\"Ability\"><span style=\"color:#000;\">Abilities</span></a></b>\n",
+       " <table class=\"roundy\" style=\"background:#FFF;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td width=\"50%\"><a href=\"/wiki/Overgrow_(Ability)\" title=\"Overgrow (Ability)\"><span style=\"color:#000;\">Overgrow</span></a>\n",
+       " </td>\n",
+       " <td style=\"display: none\" width=\"50%\"><a href=\"/wiki/Cacophony_(Ability)\" title=\"Cacophony (Ability)\"><span style=\"color:#000;\">Cacophony</span></a><br/><small></small>\n",
+       " </td>\n",
+       " <td colspan=\"1\" style=\"display: none\" width=\"50%\"><a href=\"/wiki/Cacophony_(Ability)\" title=\"Cacophony (Ability)\"><span style=\"color:#000;\">Cacophony</span></a><br/><small></small>\n",
+       " </td>\n",
+       " <td colspan=\"1\" width=\"50%\"><a href=\"/wiki/Chlorophyll_(Ability)\" title=\"Chlorophyll (Ability)\"><span style=\"color:#000;\">Chlorophyll</span></a><br/><small> Hidden Ability</small>\n",
+       " </td>\n",
+       " <td style=\"display: none\" width=\"50%\"><a href=\"/wiki/Cacophony_(Ability)\" title=\"Cacophony (Ability)\"><span style=\"color:#000;\">Cacophony</span></a><br/><small> Hidden Ability</small>\n",
+       " </td>\n",
+       " <td colspan=\"1\" style=\"display: none\" width=\"50%\"><a href=\"/wiki/Cacophony_(Ability)\" title=\"Cacophony (Ability)\"><span style=\"color:#000;\">Cacophony</span></a><br/><small></small>\n",
+       " </td>\n",
+       " <td style=\"display: none\" width=\"50%\"><a href=\"/wiki/Cacophony_(Ability)\" title=\"Cacophony (Ability)\"><span style=\"color:#000;\">Cacophony</span></a><br/><small></small>\n",
+       " </td></tr></tbody></table>\n",
+       " </td>,\n",
+       " <td class=\"roundy\" colspan=\"2\" style=\"background:#82C274;\"><b><a href=\"/wiki/Pok%C3%A9mon_breeding\" title=\"Pokémon breeding\"><span style=\"color:#000;\">Breeding</span></a></b>\n",
+       " <table style=\"border-collapse:collapse;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td width=\"50%\"><b><a href=\"/wiki/Egg_Group\" title=\"Egg Group\"><span style=\"color:#000;\">Egg Groups</span></a></b>\n",
+       " <table class=\"roundy\" style=\"background:#fff;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td><a href=\"/wiki/Monster_(Egg_Group)\" title=\"Monster (Egg Group)\"><span style=\"color:#000;\">Monster</span></a> and <a href=\"/wiki/Grass_(Egg_Group)\" title=\"Grass (Egg Group)\"><span style=\"color:#000;\">Grass</span></a>\n",
+       " </td></tr></tbody></table>\n",
+       " </td>\n",
+       " <td><b><a href=\"/wiki/Egg_cycle\" title=\"Egg cycle\"><span style=\"color:#000;\">Hatch time</span></a></b>\n",
+       " <table class=\"roundy\" style=\"background:#fff;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td>20 <small>cycles</small>\n",
+       " </td></tr></tbody></table>\n",
+       " </td></tr></tbody></table>\n",
+       " </td>,\n",
+       " <td class=\"roundy\" colspan=\"2\" style=\"background:#82C274;\"><b><a href=\"/wiki/Mega_Stone\" title=\"Mega Stone\"><span style=\"color:#000;\">Mega Stone</span></a></b>\n",
+       " <table class=\"roundy\" style=\"background:#FFF;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td>[[|<span style=\"color:#000;\"></span>]]\n",
+       " </td>\n",
+       " <td style=\"display:none;\" width=\"50%\">[[|<span style=\"color:#000;\"></span>]]\n",
+       " </td></tr></tbody></table>\n",
+       " </td>,\n",
+       " <td class=\"roundy\" colspan=\"2\" style=\"background:#82C274;\"><b><a class=\"mw-redirect\" href=\"/wiki/List_of_Pok%C3%A9mon_by_effort_value_yield\" title=\"List of Pokémon by effort value yield\"><span style=\"color:#000;\">EV yield</span></a></b>\n",
+       " <table class=\"roundy\" style=\"background:#FFF;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td colspan=\"6\">Total: 1\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td colspan=\"6\">Bulbasaur\n",
+       " </td></tr>\n",
+       " <tr>\n",
+       " <td class=\"roundy\" style=\"background:#FF5959;\" width=\"16%\">0<br/><small>HP</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#F5AC78;\" width=\"17%\">0<br/><small>Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FAE078;\" width=\"16%\">0<br/><small>Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#9DB7F5;\" width=\"17%\">1<br/><small>Sp.Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#A7DB8D;\" width=\"17%\">0<br/><small>Sp.Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FA92B2;\" width=\"17%\">0<br/><small>Speed</small>\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td colspan=\"6\">\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td class=\"roundy\" style=\"background:#FF5959;\">0<br/><small>HP</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#F5AC78;\">0<br/><small>Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FAE078;\">0<br/><small>Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#9DB7F5;\">0<br/><small>Sp.Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#A7DB8D;\">0<br/><small>Sp.Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FA92B2;\">0<br/><small>Speed</small>\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td colspan=\"6\">\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td class=\"roundy\" style=\"background:#FF5959;\">0<br/><small>HP</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#F5AC78;\">0<br/><small>Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FAE078;\">0<br/><small>Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#9DB7F5;\">0<br/><small>Sp.Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#A7DB8D;\">0<br/><small>Sp.Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FA92B2;\">0<br/><small>Speed</small>\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td colspan=\"6\">\n",
+       " </td></tr>\n",
+       " <tr style=\"display:none;\">\n",
+       " <td class=\"roundy\" style=\"background:#FF5959;\">0<br/><small>HP</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#F5AC78;\">0<br/><small>Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FAE078;\">0<br/><small>Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#9DB7F5;\">0<br/><small>Sp.Atk</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#A7DB8D;\">0<br/><small>Sp.Def</small>\n",
+       " </td>\n",
+       " <td class=\"roundy\" style=\"background:#FA92B2;\">0<br/><small>Speed</small>\n",
+       " </td></tr></tbody></table>\n",
+       " </td>,\n",
+       " <td class=\"roundy\" colspan=\"2\" style=\"background:#82C274;\"><b>External Links</b>\n",
+       " <table class=\"roundy\" style=\"background:#FFF; text-align:left;\" width=\"100%\">\n",
+       " <tbody><tr>\n",
+       " <td>\n",
+       " <ul><li>On Smogon Pokédex:\n",
+       " <ul><li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/rb/pokemon/bulbasaur/\" rel=\"nofollow\">Generation I</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/gs/pokemon/bulbasaur/\" rel=\"nofollow\">Generation II</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/rs/pokemon/bulbasaur/\" rel=\"nofollow\">Generation III</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/dp/pokemon/bulbasaur/\" rel=\"nofollow\">Generation IV</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/bw/pokemon/bulbasaur/\" rel=\"nofollow\">Generation V</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/xy/pokemon/bulbasaur/\" rel=\"nofollow\">Generation VI</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/sm/pokemon/bulbasaur/\" rel=\"nofollow\">Generation VII</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/ss/pokemon/bulbasaur/\" rel=\"nofollow\">Generation VIII</a></span></li>\n",
+       " <li><span class=\"plainlinks\"><a class=\"external text\" href=\"http://www.smogon.com/dex/sv/pokemon/bulbasaur/\" rel=\"nofollow\">Generation IX</a></span></li></ul></li>\n",
+       " <li><a class=\"extiw\" href=\"https://archives.bulbagarden.net/wiki/Category:Bulbasaur\" title=\"a:Category:Bulbasaur\">Artwork on Bulbagarden Archives</a></li></ul>\n",
+       " </td></tr></tbody></table>\n",
+       " </td>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabla = sopa.find_all('td', class_='roundy', colspan='2', style='background:#82C274;')\n",
+    "tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabla"
    ]
   }
  ],
